# GenAIFundamentals

./: README.md  README.txt  conversation_log.txt  main.py  pyproject.toml
AutoGen/: README.md  agent.py  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  autogenCore.ipynb  autogenlangchain.ipynb  autogenwithMCP.ipynb  creator.py  distributedagents.ipynb  fundamental.ipynb  idea1.md  idea2.md  idea4.md  idea5.md  messages.py  multimodel.ipynb  structuredoutput.ipynb
AutoGen/sandbox/: flights.md
Crew_AI/pythoncode/: DockerFile  README.md  pyproject.toml
Crew_AI/pythoncode/output/: code_and_output.txt
Crew_AI/pythoncode/src/pythoncode/: crew.py  main.py
Crew_AI/pythoncode/src/pythoncode/config/: agents.yaml
Crew_AI/stockresearch/: README.md  pyproject.toml
Crew_AI/stockresearch/memory/: long_term_memory_storage.db
Crew_AI/stockresearch/output/: decision.md  research_report.json  trending_companies.json
Crew_AI/stockresearch/src/stockresearch/: crew.py  main.py
Crew_AI/stockresearch/src/stockresearch/config/: agents.yaml
Crew_AI/stockresearch/src/stockresearch/tools/: push_tool.py
Fundamentals/: FirstGenAI.ipynb  FirstGenAI.py  TakingUserInputPrintResponse.ipynb  UserInputPromt.py  config.py  first.ipynb
Fundamentals/UsingGoodPractices/: README.md  config.py  main.py  utils.py
GenAIUIApp/: README.md  config.py  main.py  utils.py
OopsAsyncExamples/: README.md  app.py  basic.py  simpleuseofasync.py
OopsAsyncExamples/Services/: services.py
OopsAsyncExamples/utils/: utility.py
OpenAIAgentsSDK/: FirstPractice.ipynb  README.md  Run.py  assistant.py
OpenAIAgentsSDK/CreateMultipleAgents/: Run.py  common.py  config.py  front_end_agents.py  highleveldesign.py  lowleveldesign.py  readme.md
crew_ai_project/: README.md  pyproject.toml
crew_ai_project/output/: decide.md  oppose.md  propose.md
crew_ai_project/src/crew_ai_project/: crew.py  main.py
crew_ai_project/src/crew_ai_project/config/: agents.yaml
lang_graph/: intro.ipynb  langgraphlocalmemory.ipynb  langgraphwithSqlDB.ipynb  langgraphwithplaywright.ipynb  toolwithlanggraph.ipynb
lang_graph/SidekickPoject/: sidekicks.py
lang_graph/memory/: memory.db  memory.db-shm  memory.db-wal
