[project]
name = "crew_ai_project"
version = "0.1.0"
description = "crew_ai_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
crew_ai_project = "crew_ai_project.main:run"
run_crew = "crew_ai_project.main:run"
train = "crew_ai_project.main:train"
replay = "crew_ai_project.main:replay"
test = "crew_ai_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
