[project]
name = "pythoncode"
version = "0.1.0"
description = "pythoncode using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
pythoncode = "pythoncode.main:run"
run_crew = "pythoncode.main:run"
train = "pythoncode.main:train"
replay = "pythoncode.main:replay"
test = "pythoncode.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
